--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "core-js": "^3.21.1",
+    "moment": "^2.29.1",
+    "vue": "^2.6.11",
+    "xlsx": "^0.18.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.2",
